# TTwin

./: .gitignore  LICENSE  README.md  requirements.txt  sample.env
capture/: stereo_calibrate.py  stereo_receiver.py
materials/balls/: dhs_d40.yaml
materials/blades/: stiga_cc7_penhold.yaml
materials/rubbers/: hurricane_3.yaml  quantum_pro_hard.yaml  tenergy_05.yaml  tenergy_09c.yaml
materials/surfaces/: ittf_table.yaml
oak/: BlazeposeDepthaiEdge.py  README.md  blazepose_live.py  capture_raw.py  config.py  connect.py  discover.py  playback_3d.py  pose.py  pose_3d.py  process_recording.py  setup.sh  streams.py
tt-core/: Cargo.toml
tt-core/src/: forces.rs  integrator.rs  lib.rs  materials.rs  types.rs
tt-core/src/collision/: detection.rs  mod.rs  resolution.rs
tt-py/: Cargo.toml  pyproject.toml
tt-py/src/: lib.rs
viewers/: dual_view.py  side_view.py  view_3d.py
